--- a/Simon/manifest/package.xml
+++ b/Simon/manifest/package.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>SimonGameController</members>
+        <members>SimonGameController_Test</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
         <members>*</members>
         <name>AuraDefinitionBundle</name>
+    </types>
+    <types>
+        <members>Simon_Game_Score__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Simon_Game_Permissions</members>
+        <name>PermissionSet</name>
     </types>
     <version>52.0</version>
 </Package>
