--- a/Simon/manifest/package.xml
+++ b/Simon/manifest/package.xml
@@ -14,6 +14,10 @@
         <name>CustomObject</name>
     </types>
     <types>
+        <members>Simon_Game_Score__c</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
         <members>Simon_Game_Permissions</members>
         <name>PermissionSet</name>
     </types>
